--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "reacttest",
+  "name": "websitereact",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel": "babel",
-    "webpack": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
+    "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
@@ -20,7 +19,6 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
-    "react": "^16.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
