--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphiql": "^0.11.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
